--- a/search.ipynb
+++ b/search.ipynb
@@ -6,98 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def replace(idx, token):\n",
-    "    def _action(tokens):\n",
-    "        tokens[idx] = token\n",
-    "        return tokens\n",
-    "    return _action, (\"R\", idx, token)\n",
-    "\n",
-    "def insert(idx, token):\n",
-    "    def _action(tokens):\n",
-    "        tokens.insert(idx, token)\n",
-    "        return tokens\n",
-    "    return _action, (\"I\", idx, token)\n",
-    "\n",
-    "def delete(idx):\n",
-    "    def _action(tokens):\n",
-    "        del tokens[idx]\n",
-    "        return tokens\n",
-    "    return _action, (\"D\", idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ld_count = 0\n",
-    "def levenshtein_distance(initial_sequence, target_sequence, memory=None):\n",
-    "    global ld_count\n",
-    "    ld_count += 1\n",
-    "    if memory is None:\n",
-    "        memory = {}\n",
-    "\n",
-    "    if len(initial_sequence) == 0:\n",
-    "        return len(target_sequence)\n",
-    "    if len(target_sequence) == 0:\n",
-    "        return len(initial_sequence)\n",
-    "\n",
-    "    key = (tuple(initial_sequence), tuple(target_sequence))\n",
-    "\n",
-    "    if key in memory:\n",
-    "        return memory[key]\n",
-    "        \n",
-    "    distance = 0\n",
-    "    if initial_sequence[0] == target_sequence[0]:\n",
-    "        distance = levenshtein_distance(initial_sequence[1:], target_sequence[1:], memory)\n",
-    "    else:\n",
-    "        distance =  1 + min(\n",
-    "            levenshtein_distance(initial_sequence[1:], target_sequence, memory),\n",
-    "            levenshtein_distance(initial_sequence, target_sequence[1:], memory),\n",
-    "            levenshtein_distance(initial_sequence[1:], target_sequence[1:], memory)\n",
-    "        )\n",
-    "    memory[key] = distance\n",
-    "    return distance\n",
-    "\n",
-    "\n",
-    "def iter_actions(initial_sequence, target_sequence):\n",
-    "    for i in range(len(initial_sequence)):\n",
-    "        yield delete(i)\n",
-    "        for token in set(target_sequence):\n",
-    "            yield insert(i, token)\n",
-    "            if token != initial_sequence[i]:\n",
-    "                yield replace(i, token)\n",
-    "\n",
-    "n_actions = 0\n",
-    "\n",
-    "def find_A(initial_sequence, target_sequence):\n",
-    "    global n_actions\n",
-    "    memory = {}\n",
-    "    initial_distance = levenshtein_distance(initial_sequence, target_sequence, memory)\n",
-    "    actions = [] # All actions that reduce the distance\n",
-    "    action_strs = []\n",
-    "\n",
-    "    for action, action_str in iter_actions(initial_sequence, target_sequence):\n",
-    "        n_actions += 1\n",
-    "        new_sequence = action(initial_sequence.copy())\n",
-    "        new_distance = levenshtein_distance(new_sequence, target_sequence, memory)\n",
-    "        if new_distance < initial_distance:\n",
-    "            actions.append(action)\n",
-    "            action_strs.append(action_str)\n",
-    "    print(len(memory))\n",
-    "    return actions, action_strs\n",
-    "\n"
+    "import random\n",
+    "from policy import find_optimal_actions"
    ]
   },
   {
@@ -144,7 +54,7 @@
    "source": [
     "n_actions = 0\n",
     "ld_count = 0\n",
-    "actions, action_strs = find_A(initial_sequence, target_sequence)\n",
+    "actions, action_strs = find_optimal_actions(initial_sequence, target_sequence)\n",
     "print(\"actions\", n_actions, \"levenshtein\", ld_count)\n",
     "print(len(action_strs))\n",
     "print(action_strs)"
